# PandoraPFA

./: .travis.yml  BuildSetup.cmake  CMakeLists.txt  ChangeLog.txt  Makefile  PandoraPFANewConfig.cmake.in  PandoraSettings.xml  README  README.md
Algorithms/: CMakeLists.txt  Makefile
Algorithms/include/: FineGranularityAlgorithms.h  FineGranularityParticleId.h  FragmentRemovalAlgorithm.h  PrimaryClusteringAlgorithm.h  TopologicalAssociationAlgorithm.h
Algorithms/include/Cheating/: CheatingClusterMergingAlgorithm.h  PerfectPhotonClusteringAlgorithm.h
Algorithms/include/Clustering/: ClusteringAlgorithm.h  ECalPhotonClusteringAlgorithm.h  ForcedClusteringAlgorithm.h
Algorithms/include/FragmentRemoval/: NeutralFragmentRemovalAlgorithm.h  PhotonFragmentRemovalAlgorithm.h
Algorithms/include/Monitoring/: EnergyMonitoringAlgorithm.h
Algorithms/include/PfoConstruction/: LoopingTrackAssociationAlgorithm.h  PfoCreationAlgorithm.h  TrackPreparationAlgorithm.h  TrackRecoveryAlgorithm.h  V0PfoCreationAlgorithm.h
Algorithms/include/Reclustering/: ForceSplitTrackAssociationsAlg.h  SplitTrackAssociationsAlg.h
Algorithms/include/TopologicalAssociation/: BackscatteredTracks2Algorithm.h  BackscatteredTracksAlgorithm.h  LoopingTracksAlgorithm.h  MipPhotonSeparationAlgorithm.h  MuonPhotonSeparationAlgorithm.h  ShowerMipMerging2Algorithm.h  ShowerMipMerging4Algorithm.h  ShowerMipMergingAlgorithm.h  SoftClusterMergingAlgorithm.h
Algorithms/src/: FinalParticleIdAlgorithm.cc  FragmentRemovalAlgorithm.cc  TopologicalAssociationAlgorithm.cc
Algorithms/src/Cheating/: CheatingClusterMergingAlgorithm.cc  CheatingPfoCreationAlgorithm.cc  CheatingTrackToClusterMatching.cc  PerfectFragmentRemovalAlgorithm.cc  PerfectPhotonClusteringAlgorithm.cc
Algorithms/src/Clustering/: ClusteringAlgorithm.cc
Algorithms/src/FragmentRemoval/: MainFragmentRemovalAlgorithm.cc  NeutralFragmentRemovalAlgorithm.cc
Algorithms/src/Monitoring/: CaloHitMonitoringAlgorithm.cc  EnergyMonitoringAlgorithm.cc  MCParticlesMonitoringAlgorithm.cc  VisualMonitoringAlgorithm.cc
Algorithms/src/PfoConstruction/: KinkPfoCreationAlgorithm.cc  V0PfoCreationAlgorithm.cc
Algorithms/src/Reclustering/: ForceSplitTrackAssociationsAlg.cc  SplitMergedClustersAlg.cc  TrackDrivenMergingAlg.cc
Algorithms/src/TopologicalAssociation/: ConeBasedMergingAlgorithm.cc  LoopingTracksAlgorithm.cc  MipPhotonSeparationAlgorithm.cc  MuonClusterAssociationAlgorithm.cc  MuonPhotonSeparationAlgorithm.cc  ShowerMipMerging3Algorithm.cc  ShowerMipMerging4Algorithm.cc
FineGranularityContent/: CMakeLists.txt  Makefile
FineGranularityContent/include/: EventPreparationAlgorithm.h  FinalParticleIdAlgorithm.h  FineGranularityAlgorithms.h  FineGranularityContent.h  FineGranularityEnergyCorrections.h  FineGranularityParticleId.h  FineGranularityPseudoLayerCalculator.h  FineGranularityShowerProfileCalculator.h  FragmentRemovalAlgorithm.h  MuonReconstructionAlgorithm.h  PhotonRecoveryAlgorithm.h  PrimaryClusteringAlgorithm.h  ReclusteringAlgorithm.h  TemplateAlgorithm.h  TopologicalAssociationAlgorithm.h
FineGranularityContent/include/Cheating/: CheatingClusterMergingAlgorithm.h  CheatingPfoCreationAlgorithm.h  CheatingTrackToClusterMatching.h  PerfectClusteringAlgorithm.h  PerfectFragmentRemovalAlgorithm.h  PerfectNeutralHadronClusteringAlgorithm.h  PerfectPhotonClusteringAlgorithm.h
FineGranularityContent/include/Clustering/: ClusteringAlgorithm.h  ClusteringParentAlgorithm.h  ConeClusteringAlgorithm.h  ECalPhotonClusteringAlgorithm.h  ForcedClusteringAlgorithm.h  InwardClusteringAlgorithm.h  InwardConeClusteringAlgorithm.h  LineClusteringAlgorithm.h
FineGranularityContent/include/FragmentRemoval/: BeamHaloMuonRemovalAlgorithm.h  FragmentRemovalParentAlgorithm.h  MainFragmentRemovalAlgorithm.h  MergeSplitPhotonsAlgorithm.h  NeutralFragmentRemovalAlgorithm.h  PhotonFragmentRemovalAlgorithm.h
FineGranularityContent/include/Monitoring/: CaloHitMonitoringAlgorithm.h  DumpPfosMonitoringAlgorithm.h  EfficiencyMonitoringAlgorithm.h  EnergyMonitoringAlgorithm.h  MCParticlesMonitoringAlgorithm.h  VisualMonitoringAlgorithm.h
FineGranularityContent/include/ParticleId/: FinalParticleIdAlgorithm.h  MuonReconstructionAlgorithm.h  PhotonReconstructionAlgorithm.h  PhotonRecoveryAlgorithm.h
FineGranularityContent/include/Persistency/: EventReadingAlgorithm.h  EventWritingAlgorithm.h
FineGranularityContent/include/PfoConstruction/: CLICPfoSelectionAlgorithm.h  ClusterPreparationAlgorithm.h  KinkPfoCreationAlgorithm.h  LoopingTrackAssociationAlgorithm.h  PfoCreationAlgorithm.h  PfoCreationParentAlgorithm.h  TrackPreparationAlgorithm.h  TrackRecoveryAlgorithm.h  TrackRecoveryHelixAlgorithm.h  TrackRecoveryInteractionsAlgorithm.h  V0PfoCreationAlgorithm.h
FineGranularityContent/include/Reclustering/: ExitingTrackAlg.h  (+7 more)
FineGranularityContent/src/: EventPreparationAlgorithm.cc  FinalParticleIdAlgorithm.cc  FineGranularityEnergyCorrections.cc  FineGranularityParticleId.cc  FineGranularityPseudoLayerCalculator.cc  FineGranularityShowerProfileCalculator.cc  FragmentRemovalAlgorithm.cc  MuonReconstructionAlgorithm.cc  PhotonRecoveryAlgorithm.cc  PrimaryClusteringAlgorithm.cc  ReclusteringAlgorithm.cc  TemplateAlgorithm.cc  TopologicalAssociationAlgorithm.cc
Framework/: CMakeLists.txt  Makefile
KMeansClustering/: CMakeLists.txt  Makefile
KMeansClustering/include/: KCtree.h  KCutil.h  KM_ANN.h  KMcenters.h  KMdata.h  KMeans.h  KMfilterCenters.h  KMlocal.h  KMrand.h  KMterm.h
KMeansClustering/src/: KCtree.cpp  KCutil.cc  KMcenters.cc  KMdata.cpp  KMeans.cpp  KMfilterCenters.cc  KMlocal.cpp  KMterm.cpp
KMeansContent/: CMakeLists.txt  Makefile
KMeansContent/include/: KMdata.h  KMeansClusteringAlgorithm.h  KMeansClusteringAlgorithms.h  KMeansContent.h
KMeansContent/src/: KCtree.cc  KM_ANN.cc  KMeansClusteringAlgorithm.cc  KMfilterCenters.cc  KMrand.cc
Monitoring/: CMakeLists.txt  ChangeLog.txt  Makefile
Monitoring/include/: PandoraMonitoring.h  PandoraMonitoringApi.h
Monitoring/src/: PandoraMonitoring.cc  PandoraMonitoringApi.cc
(+476 files in other folders)
